--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -398,13 +398,13 @@ const closeButton = document.querySelectorAll('.modal-close');
   });
   document.getElementById("registrationForm").reset();
   document.getElementById("formTitle").innerHTML = "Member " + member
-  if (member <= totalMembers && counter)
+  if (member <= totalMembers && counter == true)
   {
     document.getElementById("submitForm").style.display = "block";
     document.getElementById("addMember").innerHTML = "Add Member " +  member
     member++;
   }
-  else if(member > totalMembers && counter){
+  else if(member > totalMembers && counter == true){
     document.getElementById("submitForm").style.display = "none";
     document.getElementById("addMember").innerHTML = "Done";
     document.getElementById("addMember").prop('disabled', true);
