--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -397,15 +397,15 @@ const closeButton = document.querySelectorAll('.modal-close');
        success:function(response){
         document.getElementById("registrationForm").reset();
  
-  if (member < totalMembers && counter )
+  if (member <= totalMembers && counter )
   {
     console.log('in if');
-    document.getElementById("submitForm").style.display = "none";
+    document.getElementById("submitForm").style.display = "block";
     document.getElementById("addMember").innerHTML = "Add Member " +  member
     document.getElementById("formTitle").innerHTML = "Member " + member
     member++;
   }
-  else if(member >= totalMembers && counter ){
+  else if(member > totalMembers && counter ){
     console.log('in else if')
     document.getElementById("submitForm").style.display = "none";
     document.getElementById("addMember").innerHTML = "Done";
@@ -417,7 +417,6 @@ const closeButton = document.querySelectorAll('.modal-close');
     document.getElementById("submitForm").style.display = "block";
     document.getElementById("addMember").innerHTML = "Add Member " +  (member-1);
     document.getElementById("formTitle").innerHTML = "Member " + (member -1);
-    member ++
   }
        }
        
