--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -393,7 +393,7 @@ const closeButton = document.querySelectorAll('.modal-close');
            console.log(member);
           
            alert(member);
-           if (member <= totalMembers && counter )
+           if (member <= totalMembers)
             {
               console.log('in if');
   
