adding some support

--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -399,6 +399,9 @@ const closeButton = document.querySelectorAll('.modal-close');
               document.getElementById("formTitle").innerHTML = "Member " + member
               member++;
             }
+            else{
+              document.getElementById("#registrationForm").html = 'Thank You For Registering';
+            }
            
            
          }
