--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -400,7 +400,7 @@ const closeButton = document.querySelectorAll('.modal-close');
               member++;
             }
             else{
-              document.getElementById("#registrationForm").html = 'Thank You For Registering';
+              document.getElementById("registrationForm").innerHTML = 'Thank You For Registering';
             }
            
            
