--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -315,7 +315,7 @@
       <div class="my-5 text-sm">
         <select name="gender" id="gender" 
         class="tracking-wide py-2 px-4 mb-3 placeholder-gray-400 text-black-555 leading-relaxed appearance-none block
-         w-full bg-gray-200 border border-gray-200 rounded focus:outline-none focus:bg-white focus:border-gray-500">
+         w-full bg-gray-200 border border-gray-200 rounded focus:outline-none focus:bg-white focus:border-gray-500" required>
         <option value="" disabled selected hidden>Gender</option>
         <option value="m">Male</option>
         <option value="f">Female</option>
