clear email if user already registered

--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -449,6 +449,7 @@
           waitingBtn.style.display = "none";
           },
           409: function (response) {
+            $('#team_email').val("");
             title.innerHTML = 'User already registered';
             title.classList.add("text-red-500");
             submitBtn.style.display = "block";
