--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -450,6 +450,8 @@
           },
           409: function (response) {
             $('#team_email').val("");
+            $('#name_').val("");
+            $('#college_roll_no').val("");
             title.innerHTML = 'User already registered';
             title.classList.add("text-red-500");
             submitBtn.style.display = "block";
