--- a/events/ce/3.html
+++ b/events/ce/3.html
@@ -71,7 +71,7 @@
     <div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
       <div class="block lg:hidden pl-8 p-2">
-				<a class="text-yellow-555 text-base no-underline hover:no-underline " href="../../index.html">
+				<a class="text-yellow-555 text-base no-underline hover:no-underline " href="/">
           i-GNEz
 				</a>
 			</div>
@@ -92,29 +92,29 @@
         id="nav-content">
         <ul class="list-reset lg:flex justify-center flex-1 items-center">
           <li class="mr-3">
-            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="../../index.html">Home</a>
+            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="/">Home</a>
           </li>
           <li class="mr-3"> 
             <div class="dropdown inline-block relative">
-              <a href="../../events.html" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
+              <a href="../../events" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
                 <span>Events</span>
               </a>
               <ul class="dropdown-content absolute hidden pt-1 text-center">
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../cse.html">CSE/IT</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ee.html">ECE/EE</a></li>                
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../me.html">ME</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ce.html">CE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../cse">CSE/IT</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ee">ECE/EE</a></li>                
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../me">ME</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ce">CE</a></li>
 
                 
               </ul>
             </div>
         </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555 py-2 px-4" href="../../about.html">About</a>
+            <a class="inline-block hover:text-yellow-555 py-2 px-4" href="../../about">About</a>
           </li>
           <li class="mr-3">
             <a class="inline-block hover:text-yellow-555 py-2 px-4"
-              href="../../contact.html">Contact</a>
+              href="../../contact">Contact</a>
           </li>
         </ul>
       </div>
