--- a/events/me/2.html
+++ b/events/me/2.html
@@ -71,7 +71,7 @@
     <div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
       <div class="block lg:hidden pl-8 p-2">
-				<a class="text-yellow-555 text-base no-underline hover:no-underline " href="../../index.html">
+				<a class="text-yellow-555 text-base no-underline hover:no-underline " href="/">
           i-GNEz
 				</a>
 			</div>
@@ -92,7 +92,7 @@
         id="nav-content">
         <ul class="list-reset lg:flex justify-center flex-1 items-center">
           <li class="mr-3">
-            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="../../index.html">Home</a>
+            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="/">Home</a>
           </li>
           <li class="mr-3"> 
             <div class="dropdown inline-block relative">
