--- a/events/me/2.html
+++ b/events/me/2.html
@@ -96,25 +96,25 @@
           </li>
           <li class="mr-3"> 
             <div class="dropdown inline-block relative">
-              <a href="../../events.html" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
+              <a href="../../events/" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
                 <span>Events</span>
               </a>
               <ul class="dropdown-content absolute hidden pt-1 text-center">
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../cse.html">CSE/IT</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ee.html">ECE/EE</a></li>                
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../me.html">ME</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ce.html">CE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../cse/">CSE/IT</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ee/">ECE/EE</a></li>                
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../me/">ME</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="../ce/">CE</a></li>
 
                 
               </ul>
             </div>
         </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555 py-2 px-4" href="../../about.html">About</a>
+            <a class="inline-block hover:text-yellow-555 py-2 px-4" href="../../about/">About</a>
           </li>
           <li class="mr-3">
             <a class="inline-block hover:text-yellow-555 py-2 px-4"
-              href="../../contact.html">Contact</a>
+              href="../../contact/">Contact</a>
           </li>
         </ul>
       </div>
@@ -125,7 +125,7 @@
     <div class="container mx-auto flex flex-col items-start md:flex-row my-12 md:my-36"> 
 
   <div class="flex mt-6 md:mt-12 flex-col w-full lg:w-2/5 px-8">
-    <img src="../../images/1.png" alt="event image" class="overflow-hidden rounded-lg border-2 border-gray-555">
+    <img src="/images/1.png" alt="event image" class="overflow-hidden rounded-lg border-2 border-gray-555">
 
     <button onclick="openModal()"
      class="mx-auto bg-transparent mt-4 md:mt-8 hover:bg-yellow-555 text-yellow-555 hover:text-white rounded shadow hover:shadow-lg py-2 px-4 border border-yellow-555 hover:border-transparent">
@@ -326,8 +326,8 @@
 </div>
 
 </body>
-<script src="../../js/jquery.min.js" type="text/javascript"></script>
-<script src="../../js/index.js" type="text/javascript"></script>
+<script src="/js/jquery.min.js" type="text/javascript"></script>
+<script src="/js/index.js" type="text/javascript"></script>
 <script>
 
 const modal = document.querySelector('.main-modal');
