--- a/events/me/index.html
+++ b/events/me/index.html
@@ -10,8 +10,8 @@
   <meta name="author" content="team-techfest" />
   <meta name="description" content="Official Website of i-GNEz 2021 " />
   <meta name="keywords" content="gndec,gne,i-gnez,i,gnez,webiste,techfest,2021" />
-  <link href="/css/tailwind.min.css" rel="stylesheet" />
-  <link href="/css/style.css" rel="stylesheet" />
+  <link href="../css/tailwind.min.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />
   <link rel="shortcut-icon" href="img/favicon.ico">
   <meta name="msapplication-TileColor" content="#f9fafb">
   <meta name="theme-color" content="#101010">
@@ -28,7 +28,7 @@
     <div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
       <div class="block lg:hidden pl-8 p-2">
-        <a class="text-yellow-555 text-base no-underline hover:no-underline" href="/">
+        <a class="text-yellow-555 text-base no-underline hover:no-underline" href="../index.html">
           i-GNEz
         </a>
       </div>
@@ -49,27 +49,27 @@
         id="nav-content">
         <ul class="list-reset lg:flex justify-center flex-1 items-center">
           <li class="mr-3">
-            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="/">Home</a>
+            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="../index.html">Home</a>
           </li>
           <li class="mr-3"> 
             <div class="dropdown inline-block relative">
-              <a href="../events/" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
+              <a href="../events.html" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
                 <span>Events</span>
               </a>
               <ul class="dropdown-content absolute hidden pt-1 text-center">
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="cse/">CSE/IT</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ee/">ECE/EE</a></li>
-                <li><a class="text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="me/">ME</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ce/">CE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="cse.html">CSE/IT</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ee.html">ECE/EE</a></li>
+                <li><a class="text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="me.html">ME</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ce.html">CE</a></li>
        
               </ul>
             </div>
         </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="../about/">About</a>
+            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="../about.html">About</a>
           </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="../contact/">Contact</a>
+            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="../contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -93,8 +93,8 @@
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
       <div class="overflow-hidden">
         <div class="mx-4 md:mx-2 lg:mx-0">
-          <a href="me/1/"> 
-            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src="/images/me/1.png"> 
+          <a href="me/1.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/1.png"> 
           </a>
         </div>
         <div class="p-4">
@@ -109,8 +109,8 @@
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
       <div class="overflow-hidden">
         <div class="mx-4 md:mx-2 lg:mx-0">
-          <a href="me/2/"> 
-            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src="/images/me/2.png"> 
+          <a href="me/2.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/2.png"> 
           </a>
         </div>
         <div class="p-4">
@@ -126,8 +126,8 @@
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
       <div class="overflow-hidden">
         <div class="mx-4 md:mx-2 lg:mx-0">
-          <a href="me/3/"> 
-            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src="/images/me/3.png"> 
+          <a href="me/3.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/3.png"> 
           </a>
         </div>
         <div class="p-4">
@@ -143,8 +143,8 @@
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
       <div class="overflow-hidden">
         <div class="mx-4 md:mx-2 lg:mx-0">
-          <a href="me/4/"> 
-            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src="/images/me/4.png"> 
+          <a href="me/4.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/4.png"> 
           </a>
         </div>
         <div class="p-4">
@@ -159,8 +159,8 @@
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
       <div class="overflow-hidden">
         <div class="mx-4 md:mx-2 lg:mx-0">
-          <a href="me/5/"> 
-            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src="/images/me/1.png"> 
+          <a href="me/5.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/1.png"> 
           </a>
         </div>
         <div class="p-4">
@@ -175,8 +175,8 @@
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
       <div class="overflow-hidden">
         <div class="mx-4 md:mx-2 lg:mx-0">
-          <a href="me/6/">
-            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src="/images/me/2.png"> 
+          <a href="me/6.html">
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/2.png"> 
           </a>
         </div>
         <div class="p-4">
@@ -192,8 +192,8 @@
     <div class="my-1 px-1 w-full md:w-1/2 md:my-2 md:px-2 flex flex-col justify-between lg:my-4 lg:px-4 lg:w-1/4">
       <div class="overflow-hidden">
         <div class="mx-4 md:mx-2 lg:mx-0">
-          <a href="me/7/"> 
-            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src="/images/me/3.png"> 
+          <a href="me/7.html"> 
+            <img alt="event image" class="rounded-lg border-2 border-gray-555 block object-cover h-48 w-full" src=".././images/me/3.png"> 
           </a>
         </div>
         <div class="p-4">
