--- a/events/cse/2.html
+++ b/events/cse/2.html
@@ -129,7 +129,7 @@
     <div class="container mx-auto flex flex-col items-start md:flex-row my-12 md:my-36">
 
       <div class="flex mt-6 md:mt-12 flex-col w-full lg:w-2/5 px-8">
-        <img src= "/images/1.png" alt="event image" class="overflow-hidden rounded-lg border-2 border-gray-555">
+        <img src="../../images/1.png" alt="event image" class="overflow-hidden rounded-lg border-2 border-gray-555">
 
         <button onclick="openModal()"
           class="mx-auto bg-transparent mt-4 md:mt-8 hover:bg-yellow-555 text-yellow-555 hover:text-white rounded shadow hover:shadow-lg py-2 px-4 border border-yellow-555 hover:border-transparent">
@@ -382,8 +382,8 @@
   </div>
 
 </body>
-<script src= "/js/jquery.min.js" type="text/javascript"></script>
-<script src= "/js/index.js" type="text/javascript"></script>
+<script src="../../js/jquery.min.js" type="text/javascript"></script>
+<script src="../../js/index.js" type="text/javascript"></script>
 <script>
   const modal = document.querySelector('.main-modal');
   const closeButton = document.querySelectorAll('.modal-close');
