--- a/events/index.html
+++ b/events/index.html
@@ -28,7 +28,7 @@
     <div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
       <div class="block lg:hidden pl-8 p-2">
-        <a class="text-yellow-555 text-base no-underline hover:no-underline" href="index/">
+        <a class="text-yellow-555 text-base no-underline hover:no-underline" href="index.html">
           i-GNEz
         </a>
       </div>
@@ -49,27 +49,27 @@
         id="nav-content">
         <ul class="list-reset lg:flex justify-center flex-1 items-center">
           <li class="mr-3">
-            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="index/">Home</a>
+            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="index.html">Home</a>
           </li>
           <li class="mr-3"> 
             <div class="dropdown inline-block relative">
-              <a href="events/" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
+              <a href="events.html" class="border-b-0 md:border-b-4 border-yellow-555 text-yellow-555 py-2 px-4 inline-flex items-center">
                 <span>Events</span>
               </a>
               <ul class="dropdown-content absolute hidden pt-1 text-center">
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="cse/">CSE/IT</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ee/">ECE/EE</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="me/">ME</a></li>
-                <li><a class="text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ce/">CE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="cse.html">CSE/IT</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ee.html">ECE/EE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="me.html">ME</a></li>
+                <li><a class="text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ce.html">CE</a></li>
                 
               </ul>
             </div>
         </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="about/">About</a>
+            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="about.html">About</a>
           </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="contact/">Contact</a>
+            <a class="inline-block hover:text-yellow-555 hover:text-underline py-2 px-4" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -90,7 +90,7 @@
   <div class="flex flex-wrap md:ml-0 mx-auto">
 
     <div class="mx-auto px-4 py-4 max-w-xl my-auto">
-        <a class="rounded-lg" href='events/cse/'>
+        <a class="rounded-lg" href='events/cse.html'>
             <img src="images/cse/main.png" alt="uploaded cover image"
               class="h-64 overflow-hidden rounded-lg border-2 border-gray-555 w-full rounded-lg">
         </a>
@@ -102,7 +102,7 @@
       </div>
 
       <div class="mx-auto px-4 py-4 max-w-xl my-auto">
-        <a class="rounded-lg" href='events/ee/'>
+        <a class="rounded-lg" href='events/ee.html'>
             <img src="images/ee/main.png" alt="uploaded cover image"
               class="h-64 overflow-hidden rounded-lg border-2 border-gray-555 w-full rounded-lg">
         </a>
@@ -114,7 +114,7 @@
       </div>
 
       <div class="mx-auto px-4 py-4 max-w-xl my-auto">
-        <a class="rounded-lg" href='events/me/'>
+        <a class="rounded-lg" href='events/me.html'>
             <img src="images/me/main.png" alt="uploaded cover image"
               class="h-64 overflow-hidden rounded-lg border-2 border-gray-555 w-full rounded-lg">
         </a>
@@ -126,7 +126,7 @@
       </div>
 
       <div class="mx-auto px-4 py-4 max-w-xl my-auto">
-        <a class="rounded-lg" href='events/ce/'>
+        <a class="rounded-lg" href='events/ce.html'>
             <img src="images/ce/main.png" alt="uploaded cover image"
               class="h-64 overflow-hidden rounded-lg border-2 border-gray-555 w-full rounded-lg">
         </a>
