--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       style="background:linear-gradient(to right, #FFC100 var(--scroll), transparent 0);"></div>
     <div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
       <div class="block lg:hidden pl-8 p-2">
-        <a class="text-yellow-555 text-base no-underline hover:no-underline " href="/">
+        <a class="text-yellow-555 text-base no-underline hover:no-underline " href="index.html">
           i-GNEz
         </a>
       </div>
@@ -44,28 +44,28 @@
         id="nav-content">
         <ul class="list-reset lg:flex justify-center flex-1 items-center">
           <li class="mr-3">
-            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="/">Home</a>
+            <a class="inline-block py-2 px-4 hover:text-yellow-555 font-bold" href="index.html">Home</a>
           </li>
           <li class="mr-3"> 
             <div class="dropdown inline-block relative">
-              <a href="/events/" class="hover:text-yellow-555 py-2 px-4 inline-flex items-center">
+              <a href="events.html" class="hover:text-yellow-555 py-2 px-4 inline-flex items-center">
                 <span>Events</span>
               </a>
               <ul class="dropdown-content absolute hidden pt-1 text-center">
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/cse/">CSE/IT</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ee/">ECE/EE</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/me/">ME</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ce/">CE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/cse.html">CSE/IT</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ee.html">ECE/EE</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/me.html">ME</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/ce.html">CE</a></li>
    
               </ul>
             </div>
         </li>
           <li class="mr-3">
-            <a class="inline-block hover:text-yellow-555 py-2 px-4" href="/about">About</a>
+            <a class="inline-block hover:text-yellow-555 py-2 px-4" href="about.html">About</a>
           </li>
           <li class="mr-3">
             <a class="border-b-0 md:border-b-4 border-yellow-555 inline-block text-yellow-555 py-2 px-4"
-              href="/contact">Contact</a>
+              href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
