other categry added

--- a/events.html
+++ b/events.html
@@ -136,6 +136,17 @@
           </p>
         </div>
       </div>
+      <div class="mx-auto px-4 py-4 max-w-xl my-auto">
+        <a class="rounded-lg" href='events/ee.html'>
+            <img src="images/ee/main.png" alt="uploaded cover image"
+              class="h-64 overflow-hidden rounded-lg border-2 border-gray-555 w-full rounded-lg">
+        </a>
+        <div class="p-4">
+          <p class="text-3xl text-center md:text-4xl leading-normal md:leading-relaxed mb-2">
+            Other
+          </p>
+        </div>
+      </div>
 
           
         </div>
