--- a/events.html
+++ b/events.html
@@ -61,7 +61,7 @@
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ee.html">ECE/EE</a></li>
                 <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="me.html">ME</a></li>
                 <li><a class="text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="ce.html">CE</a></li>
-                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="events/other.html">Other</a></li>
+                <li><a class="hover:text-yellow-555 bg-black-555 py-2 px-4 block whitespace-no-wrap" href="other.html">Other</a></li>
               </ul>
             </div>
         </li>
